# discord-community-bot

./: Cargo.toml  LICENSE
src/: config.rs  console.rs  handler.rs  main.rs  setup.rs
